fix kerning with MUP

--- a/powerops.tex
+++ b/powerops.tex
@@ -401,7 +401,7 @@ There is a unique sequence of maps \[P^{\Sigma_{p^k}}\co \G \times \Sub_{p^k} \G
 
 \subsection*{\(H_\infty\)--orientations}
 
-Having worked through enough of the underlying algebra, we now return to our intended application: \(H_\infty\) complex-orientations of Morava \(E\)--theory.  As we have avoided endowing \(E\)--theory with an \(H_\infty\)--structure so far, there are some open questions as to what this might mean.  To resolve this ambiguity, recall first from \Cref{OmnibusEinftyTheorem} that there exists at least one \(H_\infty\)--ring structure on Morava \(E\)--theory.  Next, notice that the set of \(H_\infty\)--ring maps is the subset of homotopy classes of ring maps which commute with the \(\Sigma_n\)--power operations on the source and target.  In the case of \(MUP\)--orientations, this has a surprising effect: since an ordinary ring map \(MUP \to E\) corresponds to a map \(\CP^\infty \to E\), the theory of \(H_\infty\)--orientations can be entirely read off from the behavior of the power operations on \(\CP^\infty\).  The behavior of power operations as restricted to this setting is wholly captured in \Cref{DeterminationOfPowerMaps}: an \(H_\infty\) structure on Morava \(E\)--theory carries a \(\Sigma_{p^k}\)--power operation map \[E^0 \CP^\infty \otimes E^0 B\Sigma_{p^k} \from E^0 \CP^\infty,\] which corresponds to the map of formal schemes
+Having worked through enough of the underlying algebra, we now return to our intended application: \(H_\infty\) complex-orientations of Morava \(E\)--theory.  As we have avoided endowing \(E\)--theory with an \(H_\infty\)--structure so far, there are some open questions as to what this might mean.  To resolve this ambiguity, recall first from \Cref{OmnibusEinftyTheorem} that there exists at least one \(H_\infty\)--ring structure on Morava \(E\)--theory.  Next, notice that the set of \(H_\infty\)--ring maps is the subset of homotopy classes of ring maps which commute with the \(\Sigma_n\)--power operations on the source and target.  In the case of \(\MUP\)--orientations, this has a surprising effect: since an ordinary ring map \(\MUP \to E\) corresponds to a map \(\CP^\infty \to E\), the theory of \(H_\infty\)--orientations can be entirely read off from the behavior of the power operations on \(\CP^\infty\).  The behavior of power operations as restricted to this setting is wholly captured in \Cref{DeterminationOfPowerMaps}: an \(H_\infty\) structure on Morava \(E\)--theory carries a \(\Sigma_{p^k}\)--power operation map \[E^0 \CP^\infty \otimes E^0 B\Sigma_{p^k} \from E^0 \CP^\infty,\] which corresponds to the map of formal schemes
 \begin{center}
 \begin{tikzcd}
 \Spf (E^0 \CP^\infty \otimes E^0 B\Sigma_{p^k} / I_{\Tr}) \arrow{r} \arrow[equal]{d} & \Spf E^0 \CP^\infty \arrow[equal]{d} \\
@@ -426,15 +426,15 @@ Let \(E\) be an \(E_\infty\)--ring spectrum and let \(X\) be a space such that \
 \end{theorem}
 
 \begin{corollary}[{\cite[pg.\ 271]{AHSHinfty}, \cite[Proposition VII.7.2]{BMMS}}]
-A ring map \(x\co MUP \to E_\Gamma\) is \(H_\infty\) if and only if the internal power operations commute: \[
+A ring map \(x\co \MUP \to E_\Gamma\) is \(H_\infty\) if and only if the internal power operations commute: \[
 \pushQED{\qed}
-x \circ \mu^{C_p}_{MUP} \circ \Delta = \mu^{C_p}_{E_\Gamma} \circ x^{\sm p}_{hC_p} \circ \Delta \in E_\Gamma^0 T(\L \otimes \rho \downarrow \CP^\infty \times BC_p).
+x \circ \mu^{C_p}_{\MUP} \circ \Delta = \mu^{C_p}_{E_\Gamma} \circ x^{\sm p}_{hC_p} \circ \Delta \in E_\Gamma^0 T(\L \otimes \rho \downarrow \CP^\infty \times BC_p).
 \qedhere
 \popQED
 \]
 \end{corollary}
 
-We now expand the algebraic condition that this last Corollary encodes.  The power operation for \(MUP\) was described in \Cref{AjAndBjAreInTheFGLSubring}, where we found that it applies the norm construction to \(f\) for the universal \(\Z/p\)--level structure on \(\G\).  The cyclic power operation on Morava \(E\)--theory was determined in the previous section to act by pullback along the deformation of Frobenius isogeny associated to the same universal level structure.  This condition is important enough to warrant a name:
+We now expand the algebraic condition that this last Corollary encodes.  The power operation for \(\MUP\) was described in \Cref{AjAndBjAreInTheFGLSubring}, where we found that it applies the norm construction to \(f\) for the universal \(\Z/p\)--level structure on \(\G\).  The cyclic power operation on Morava \(E\)--theory was determined in the previous section to act by pullback along the deformation of Frobenius isogeny associated to the same universal level structure.  This condition is important enough to warrant a name:
 
 \begin{definition}\label{NormCoherentDefn}
 A coordinate \(\phi\co \G \to \A^1\) on a Lubin--Tate group \(\G\) is said to be \index{norm!coherence}\textit{norm-coherent} when for all subgroups \(K \subseteq \G\), we have that \(N_K \phi\) and \(\psi_K^* \phi\) are related by the isomorphism \(g_K\).
@@ -464,10 +464,10 @@ One can already show that the unicity clause applies: there is only one section 
 \end{proof}
 
 \begin{corollary}[{cf.\ \cite[Theorem 5]{Ando}}]\label{AHSHinftyResultForEthy}
-For \(\Gamma\) a finite height formal group over a perfect base field and for any choice of \(H_\infty\)--ring structure on \(E_\Gamma\), every orientation \(s_0\co MUP \to K_\Gamma\) extends uniquely to a diagram
+For \(\Gamma\) a finite height formal group over a perfect base field and for any choice of \(H_\infty\)--ring structure on \(E_\Gamma\), every orientation \(s_0\co \MUP \to K_\Gamma\) extends uniquely to a diagram
 \begin{center}
 \begin{tikzcd}
-MUP \arrow["s_0"]{rd} \arrow["s"]{d} \\
+\MUP \arrow["s_0"]{rd} \arrow["s"]{d} \\
 E_\Gamma \arrow{r} & K_\Gamma,
 \end{tikzcd}
 \end{center}
