--- a/preamble.tex
+++ b/preamble.tex
@@ -196,7 +196,6 @@
 \newcommand{\barG}{\overline{\mathbb G}}
 \newcommand{\RP}{\R\mathrm P}
 \newcommand{\CP}{\C\mathrm P}
-\newcommand{\HP}{\mathbb H\mathrm P}
 \newcommand{\FH}{\textbf{FH}}
 \newcommand{\UFH}{\textbf{UFH}}
 \newcommand{\UGH}{\textbf{UGH}}
@@ -206,6 +205,7 @@
 \newcommand{\Ga}{\mathbb G_a}
 \newcommand{\ThomDivisor}{\mathbb D}
 \renewcommand{\AA}{A\!\!A} % the right join of the leg and bar on the left letter should meet the left join of the leg and bar of the right letter
+\newcommand{\HP}{\mathit{HP}}
 
 \newcommand{\<}{\langle}
 \renewcommand{\>}{\rangle}
@@ -260,6 +260,7 @@
 \newcommand{\TMF}{\mathit{TMF}}
 \newcommand{\Tmf}{\mathit{Tmf}}
 \newcommand{\tmf}{\mathit{tmf}}
+\newcommand{\MUP}{\mathit{MUP}}
 \renewcommand{\top}{\mathrm{top}}
 \renewcommand{\ss}{\mathrm{ss}}
 \newcommand{\ord}{\mathrm{ord}}
