--- a/quillen.tex
+++ b/quillen.tex
@@ -586,7 +586,7 @@ As employed in \Cref{Pi2AndInvariantDiffls}, a model for $\zeta^* \sheaf I(D)$ i
 \end{proof}
 
 \begin{theorem}[{cf.\ \Cref{BUZTriumvirate}}]\label{ComplexOrientationsInTermsOfTrivs}
-A trivialization \(t\co \ThomSheaf{\L} \cong \sheaf O_{\CP^\infty_E}\) of the Thom sheaf associated to the canonical bundle induces an \index{orientation}orientation \(MUP \to E\).
+A trivialization \(t\co \ThomSheaf{\L} \cong \sheaf O_{\CP^\infty_E}\) of the Thom sheaf associated to the canonical bundle induces an \index{orientation}orientation \(\MUP \to E\).
 \end{theorem}
 \begin{proof}[Proof sketch]
 Suppose that \(V\) is a rank \(n\) vector bundle over \(X\), and let \(f\co Y \to X\) be the space guaranteed by the splitting principle to provide an isomorphism \(f^* V \cong \bigoplus_{j=1}^n \L_j\).  The chosen trivialization \(t\) then pulls back to give a trivialization of \(\sheaf I(\P(f^* V)_E)\), and by finite flatness this descends to also give a trivialization of \(\sheaf I(\P(V)_E)\).  Pulling back along the zero section gives a trivialization of \(\ThomSheaf{V}\).  Then note that the system of trivializations produced this way is multiplicative, as a consequence of \(\P(V_1 \oplus V_2)_E \cong \P(V_1)_E \sqcup \P(V_2)_E\).  In the universal examples, this gives a sequence of compatible maps \(MU(n) \to E\) which assemble on the colimit \(n \to \infty\) to give the desired map of ring spectra.
@@ -1082,7 +1082,7 @@ is an isomorphism.  It follows from \Cref{DummyLazardsThm} that the left-most ve
 \end{proof}
 
 \begin{corollary}
-The ring \(\pi_*(MU \sm MU)\) carries the universal example of two \index{formal group!strict isomorphism}strictly isomorphic formal group laws.  Additionally, the ring \(\pi_0 (MUP \sm MUP)\) carries the universal example of two isomorphic formal group laws.
+The ring \(\pi_*(MU \sm MU)\) carries the universal example of two \index{formal group!strict isomorphism}strictly isomorphic formal group laws.  Additionally, the ring \(\pi_0 (\MUP \sm \MUP)\) carries the universal example of two isomorphic formal group laws.
 \end{corollary}
 \begin{proof}
 Combine \Cref{OrientationsOnEAndMU} and \Cref{QuillensTheorem}.
