--- a/sigma.tex
+++ b/sigma.tex
@@ -4,7 +4,7 @@
 
 By this point, we have seen a great many ways that algebraic geometry exerts control over the behavior of homotopy theory, stable and unstable.  The goal in this Case Study is to explore a setting where algebraic geometry is itself tightly controlled: whereas the behavior of formal groups is quite open-ended, the behavior of \emph{abelian varieties} is comparatively strict.  We import this strictness into algebraic topology by studying complex-orientable cohomology theories \(E\) which have been tagged with an auxiliary abelian variety \(A\) and an isomorphism \(\phi\co \CP^\infty_E \cong A^\wedge_0\).  In the case that \(A\) is an elliptic curve, this is our definition of an \textit{elliptic cohomology theory}.  The idea, then, is not that this puts serious constraints on the formal group \(\CP^\infty_E\) (although it does place some), but rather that the theory of abelian varieties endows \(A\), and hence \(A^\wedge_0\), with various bits of preferred data.  This is the tack we take to construct a \emph{canonical} \(MU[6, \infty)\)--orientation of \(E\): for any complex-orientable \(E\), we identify the collection of such ring maps with ``\(\Theta\)--structures on \(\CP^\infty_E\)''; a basic theorem about abelian varieties endows the elliptic curve \(A\) with a canonical such structure; and altogether this yields the desired orientation for an elliptic spectrum.
 
-Making the identification of \(MU[6, \infty)\)--orientations with \(\Theta\)--structures requires real work, but many of the stepping stones are now in place.  We begin with a technical section about especially nice formal schemes, called \textit{coalgebraic}, and we use this to finally give the proof, announced back in \Cref{DivConstructionsAreFree}, that the scheme of stable Weil divisors on a formal curve presents the free formal group on that curve.  With that out of the way and with \(MU[6, \infty)\) in mind as the eventual goal, we then summarize the behavior of the part of the Postnikov tower for complex bordism that we \emph{do} understand---the cases of \(MUP\) and \(MU\)---and use this to make an analysis of \(M\SU\).  In particular, we rely heavily on the results from \Cref{ComplexBordismChapter} and \Cref{ChapterFiniteSpectra} to understand the co/homological behaviors of \(BU \times \Z\), \(BU\), \(MUP\), and \(MU\), which we employ as traction in understanding \(BSU\) and \(MSU\).
+Making the identification of \(MU[6, \infty)\)--orientations with \(\Theta\)--structures requires real work, but many of the stepping stones are now in place.  We begin with a technical section about especially nice formal schemes, called \textit{coalgebraic}, and we use this to finally give the proof, announced back in \Cref{DivConstructionsAreFree}, that the scheme of stable Weil divisors on a formal curve presents the free formal group on that curve.  With that out of the way and with \(MU[6, \infty)\) in mind as the eventual goal, we then summarize the behavior of the part of the Postnikov tower for complex bordism that we \emph{do} understand---the cases of \(\MUP\) and \(MU\)---and use this to make an analysis of \(M\SU\).  In particular, we rely heavily on the results from \Cref{ComplexBordismChapter} and \Cref{ChapterFiniteSpectra} to understand the co/homological behaviors of \(BU \times \Z\), \(BU\), \(\MUP\), and \(MU\), which we employ as traction in understanding \(BSU\) and \(MSU\).
 
 The coherence of all of these statements gives us very explicit target theorems to aim for in our study of \(MU[6, \infty)\), but we are forced to approach them from a different vantage point: whereas we can prove a splitting principle for \(\SU\)--bundles, the analogous statement for \(U[5, \infty)\)--bundles does not appear to admit a direct proof.  Consequently, the proofs of the other structure theorems for \(BU[6, \infty)\) and \(MU[6, \infty)\) are made considerably more complicated because we have to work with our splitting principle hands tied.  Instead, our main tools are the results developed in \Cref{UnstableCooperationsChapter}, which give us direct access to the co/homology of the layers of the Postnikov tower.  When the dust of all this settles, we will have arrived at a very satisfying and complete theory of \(MU[6, \infty)\)--orientations, applicable to an arbitrary complex-orientable cohomology theory.
 
@@ -146,9 +146,9 @@ The \index{Dieudonn\'e module}Dieudonn\'e module of the Cartier dual of a formal
 
 Starting in this Lecture, after our extended interludes on chromatic homotopy theory and cooperations, we return to thinking about bordism orientations directly.  To begin, we will summarize the various perspectives already adopted in \Cref{ComplexBordismChapter} when we were studying complex orientations of ring spectra.
 \begin{enumerate}
-\item (\Cref{DefnComplexOrientation}:) A \index{orientation!complex}complex--orientation of \(E\) is, definitionally, a map \(MUP \to E\) of ring spectra in the homotopy category.
+\item (\Cref{DefnComplexOrientation}:) A \index{orientation!complex}complex--orientation of \(E\) is, definitionally, a map \(\MUP \to E\) of ring spectra in the homotopy category.
 \item (\Cref{ComplexOrientationsInTermsOfTrivs}:) A complex--orientation of \(E\) is also equivalent to a multiplicative system of \index{Thom isomorphism}Thom isomorphisms for complex vector bundles.  Such a system is determined by its value on the universal line bundle \(\L\) over \(\CP^\infty\).  We can also phrase this algebro-geometrically: such a Thom isomorphism is the data of a trivialization of the \index{Thom sheaf}Thom sheaf \(\ThomSheaf{\L}\) over \(\CP^\infty_E\).\index{canonical bundle}
-\item (\Cref{OrientationsOnEAndMU}:) Ring spectrum maps \(MUP \to E\) induce on \(E\)--homology maps \(E_0 MUP \to E_0\) of \(E_0\)--algebras.  This, too, can be phrased algebro-geometrically: these are elements of \((\Spec E_0 MUP)(E_0)\).
+\item (\Cref{OrientationsOnEAndMU}:) Ring spectrum maps \(\MUP \to E\) induce on \(E\)--homology maps \(E_0 \MUP \to E_0\) of \(E_0\)--algebras.  This, too, can be phrased algebro-geometrically: these are elements of \((\Spec E_0 \MUP)(E_0)\).
 \end{enumerate}
 We can summarize our main result about these perspectives as follows:
 \begin{theorem}[{\cite[Example 2.53]{AHSTheoremOfTheCube}}]\label{BUZTriumvirate}
@@ -157,10 +157,10 @@ Take \(E\) to be \emph{even-periodic} (hence complex-orientable, cf.\ \Cref{Even
 \CatOf{AffineSchemes}_{/\Spec E_0} & \to \CatOf{Sets}, \\
 (\Spec T \xrightarrow{u} \Spec E_0) & \mapsto \left\{ \text{trivializations of \(u^* \ThomSheaf{\L}\) over \(u^* \CP^\infty_E\)} \right\}
 \end{align*}
-is isomorphic to the affine scheme \(\Spec E_0 MUP\).  Moreover, the \(E_0\)--points of this scheme biject with ring spectrum maps \(MUP \to E\).
+is isomorphic to the affine scheme \(\Spec E_0 \MUP\).  Moreover, the \(E_0\)--points of this scheme biject with ring spectrum maps \(\MUP \to E\).
 \end{theorem}
 \begin{proof}[Proof summary]
-The equivalence between (1) and (3)---i.e., between complex-orientations and \(E_0\)--points of \(\Spec E_0 MUP\)---follows from calculating that \(E_0 MUP\) is a free \(E_0\)--module, so that there is a collapse in the universal coefficient theorem.  Then, the equivalence between (1) and (2) follows from the \index{splitting principle}splitting principle for complex line bundles, which says that the first \index{Chern class}Chern class of \(\L\)---i.e., a trivialization of \(\ThomSheaf{\L}\)---determines the rest of the map \(MUP \to E\).
+The equivalence between (1) and (3)---i.e., between complex-orientations and \(E_0\)--points of \(\Spec E_0 \MUP\)---follows from calculating that \(E_0 \MUP\) is a free \(E_0\)--module, so that there is a collapse in the universal coefficient theorem.  Then, the equivalence between (1) and (2) follows from the \index{splitting principle}splitting principle for complex line bundles, which says that the first \index{Chern class}Chern class of \(\L\)---i.e., a trivialization of \(\ThomSheaf{\L}\)---determines the rest of the map \(\MUP \to E\).
 \end{proof}
 
 An analogous result holds for ring spectrum maps \(MU \to E\) and the line bundle \(1 - \L\), and it is proven in analogous way.  In particular, we will want a version of the splitting principle for virtual vector bundles of virtual rank \(0\).  Given a finite complex \(X\) and such a rank \(0\) virtual vector bundle, write \(\tilde V \co X \to BU\) for the classifying map.  Because \(X\) is a finite complex, there exists an integer \(n\) so that \(\tilde V = -(n \cdot 1 - V)\) for an honest rank \(n\) vector bundle \(V\) over \(X\).  Using \Cref{OriginalSplittingPrinciple}, the splitting \(f^* V \cong \bigoplus_{i=1}^n \L_i\) over \(Y\) gives a presentation of \(\tilde V\) as \[\tilde V = -(n \cdot 1 - V) = -\bigoplus_{i=1}^n (1 - \L_i).\]  Crucially, we have organized this sum \emph{entirely in terms of bundles classified by \(BU\)}, as each bundle \(1 - \L_i\) itself has the natural structure of a rank \(0\) virtual vector bundle.  This version of the splitting principle, together with our extended discussion of formal geometry, begets the following analogue of the previous result:
@@ -202,7 +202,7 @@ is the subscheme of those maps sending the identity point of \(\CP^\infty_E\) to
 The topological maps
 \begin{align*}
 BU & \to \Z \times BU, &
-MU & \to MUP
+MU & \to \MUP
 \end{align*}
 induce recognizable algebro-geometric maps upon application of \(\Spec E_0(-)\).  The comparison map \[(\Spec E_0(\Z \times BU))(T) \to \InternalHom{FormalSchemes}(\CP^\infty_E, \Gm)\] reads off the image of a map \[f\co E_0(\Z \times BU) \cong E_0[b_0^\pm, b_1, \ldots] \to T\] as the components of a function \(\sum_j f(b_0^j b_j) x^j \in T \otimes \sheaf O_{\CP^\infty_E}\), whereas the comparison map for \(BU\) reads off the image of a map \[g\co E_0(BU) \cong E_0[b_0^\pm, b_1, b_2, \ldots] / (b_0 = 1) \to T\] as the components of a function \(\sum_j g(b_j)x^j\), effecting a normalizing division by \(b_0\), itself the image of \(\CP^0_E \subseteq \CP^\infty_E\) in \(\Gm\).  Geometrically, this gives the commuting square
 \begin{center}
@@ -213,7 +213,7 @@ f(t) \arrow[|->]{r} & f(t) / f(0).
 \end{tikzcd}
 \end{center}
 
-At the level of Thom spectra, these identifications are controlled by the \index{Chern class}Chern classes associated to these bundles, and we now briefly summarize their relationship.  The spaces \(\Z \times BU\) and \(BU\) are the \(0\){\th} and \(2\){\nd} spaces in the \(\Omega\)--spectrum for connective complex \(K\)--theory, and since connective complex \(K\)--theory is complex-orientable, we have \(kU^*(\CP^\infty) = \Z[\beta]\ps{c_1}\).  Inside this ring there is the relation \[\beta c_1 = (1 - \L).\]  The pieces of this topological formula have recognizable provenances: \(\beta\) is the restriction of the tautological bundle on \(\CP^\infty\) to \(S^2 \simeq \CP^1\), \((1 - \L)\) governs the theory of Chern classes for an \(MUP\)--orientation, and \(c_1\) governs the theory of Chern classes for an \(MU\)--orientation.  Applying our conversions to algebro-geometric terms (i.e., the Theorems above as well as \Cref{Pi2AndInvariantDiffls}), this same equation says that the trivialization \(f\) of \(\ThomSheaf{u^* \L}\), corresponding to a point in \((\Spec E_0 MUP)(T)\), is sent to the trivialization \(f'(0) / f\) of \(\ThomSheaf{u^*(1 - \L)}\), corresponding to the induced point in \((\Spec E_0 MU)(T)\).
+At the level of Thom spectra, these identifications are controlled by the \index{Chern class}Chern classes associated to these bundles, and we now briefly summarize their relationship.  The spaces \(\Z \times BU\) and \(BU\) are the \(0\){\th} and \(2\){\nd} spaces in the \(\Omega\)--spectrum for connective complex \(K\)--theory, and since connective complex \(K\)--theory is complex-orientable, we have \(kU^*(\CP^\infty) = \Z[\beta]\ps{c_1}\).  Inside this ring there is the relation \[\beta c_1 = (1 - \L).\]  The pieces of this topological formula have recognizable provenances: \(\beta\) is the restriction of the tautological bundle on \(\CP^\infty\) to \(S^2 \simeq \CP^1\), \((1 - \L)\) governs the theory of Chern classes for an \(\MUP\)--orientation, and \(c_1\) governs the theory of Chern classes for an \(MU\)--orientation.  Applying our conversions to algebro-geometric terms (i.e., the Theorems above as well as \Cref{Pi2AndInvariantDiffls}), this same equation says that the trivialization \(f\) of \(\ThomSheaf{u^* \L}\), corresponding to a point in \((\Spec E_0 \MUP)(T)\), is sent to the trivialization \(f'(0) / f\) of \(\ThomSheaf{u^*(1 - \L)}\), corresponding to the induced point in \((\Spec E_0 MU)(T)\).
 \end{remark}
 
 
@@ -359,7 +359,7 @@ Thus far, we have established the following families of isomorphisms:
 & & \Spec E_0(BU) & \cong C^1(\CP^\infty_E; \Gm), \\
 & & \Spec E_0(B\SU) & \cong C^2(\CP^\infty_E; \Gm), \\
 \text{(Orientation schemes:)} & &
-    \Spec E_0(MUP) & \cong C^0(\CP^\infty_E; \sheaf I(0)), \\
+    \Spec E_0(\MUP) & \cong C^0(\CP^\infty_E; \sheaf I(0)), \\
 & & \Spec E_0(MU) & \cong C^1(\CP^\infty_E; \sheaf I(0)),
 \end{align*}
 where we have abusively abbreviated the sheaf of functions on \(\CP^\infty_E\) to \(\Gm\).  In order to fill in the missing piece, we exploit the torsor structure on Thom spectra discussed earlier.
@@ -732,7 +732,7 @@ More generally, there is an isomorphism \[\HFtwo^* \OS{kU}{2k} \cong \frac{\HFtw
 These methods and results generalize directly to odd primes: Singer shows \[\HFp^* \OS{kU}{2k} \cong \frac{\HFp^* BU}{(c_j \mid \sigma_p(j-1) < k-1)} \otimes \prod_{t=0}^{p-2} \operatorname{Op}[\beta \mathcal P^1 \iota_{2k-3-2t}].\]  The necessary modifications come from the structure of unstable mod--\(p\) Steenrod algebra, odd--primary analogues of Wu's formulas~\cite{Shay}, and the Eilenberg--Moore spectral sequence.  Specializing to \(k = 3\), this again presents \(H^* BU[6, \infty)\) as a quotient by \(H^* BU\) by certain Chern classes whose indices satisfy a \(p\)--adic digital sum condition, tensored up with the Steenrod--Hopf--subalgebra of \(H^* \OS{H\Z}{3}\) generated by \(\beta \mathcal P^1 \iota_3\).
 \end{proof}
 
-From the edge homomorphisms in \Cref{HF2BU6Calculation}, we can already see that the sequence of Hopf algebras \[H_* \OS{H\Z}{3} \to H_* BU[6, \infty) \to H_* B\SU\] modeling the sequence of formal group schemes \[\text{``\((\OS{H\Z}{3})_{HP}\)''} \to BU[6, \infty)_{HP} \to B\SU_{HP}\] is neither left-exact nor right-exact.  This seems bleak.
+From the edge homomorphisms in \Cref{HF2BU6Calculation}, we can already see that the sequence of Hopf algebras \[H_* \OS{H\Z}{3} \to H_* BU[6, \infty) \to H_* B\SU\] modeling the sequence of formal group schemes \[\text{``\((\OS{H\Z}{3})_{\mathit{HP}}\)''} \to BU[6, \infty)_{\mathit{HP}} \to B\SU_{\mathit{HP}}\] is neither left-exact nor right-exact.  This seems bleak.
 
 Ever the optimists, we embark on an analysis of the available algebra all the same.  We begin by reusing a strategy previously employed in \Cref{CalculationOfLTTangentSpace}: first perform a \index{formal scheme!tangent space}\index{tangent spectral sequence}tangent space calculation \[T_0 C^k(\G_a; \Gm) \cong C^k(\G_a; \G_a),\] then study the behavior of the different tangent directions to determine the full object \(C^k(\G_a; \Gm)\).  As a warm-up to the case \(k = 3\) of interest, we will first consider the case \(k = 2\).  We have already performed the tangent space calculation:
 
@@ -820,7 +820,7 @@ We don't actually have to compute much about the middle map.  Because the square
 The map \(\hat \Pi_3\) is an isomorphism for any complex-orientable \(E\).
 \end{corollary}
 \begin{proof}[Proof sketch]
-This follows much along the lines of \Cref{HopfRingForEBP}.  The evenness of the topological calculation at \(E = \HFp\) shows that the statement holds for \(H\Z^\wedge_p\) and \(H\Z_{(p)}\), and since \(p\) is arbitrary we conclude it for \(H\Z\) as well.  We thus learn that the statement holds for \(E = MUP\) using a tangent space argument, and then an Atiyah--Hirzebruch argument gives the statement for any complex-oriented \(E\).
+This follows much along the lines of \Cref{HopfRingForEBP}.  The evenness of the topological calculation at \(E = \HFp\) shows that the statement holds for \(H\Z^\wedge_p\) and \(H\Z_{(p)}\), and since \(p\) is arbitrary we conclude it for \(H\Z\) as well.  We thus learn that the statement holds for \(E = \MUP\) using a tangent space argument, and then an Atiyah--Hirzebruch argument gives the statement for any complex-oriented \(E\).
 \end{proof}
 
 \begin{remark}
@@ -857,7 +857,7 @@ s \in \Theta^2 \sheaf I(0) & \mapsto \frac{\mu_{12}^* s}{\mu_1^* s \otimes \mu_2
 \end{lemma}
 
 \begin{remark}
-The rational conclusion of this analysis admits a very mild reformulation.  Note first that there is always a natural \(MU[6, \infty)\)--orientation of a rational spectrum \(E\) given by the composite \[MU[6, \infty) \to MU[6, \infty) \otimes \Q \to H\Q = \S \otimes \Q \xrightarrow{\eta_E} E \otimes \Q = E.\]  This canonical point turns the \(C^3(\CP^\infty_E; \Gm)\)--torsor structure of \(C^3(\CP^\infty_E; \sheaf I(0))\) into an isomorphism \(C^3(\CP^\infty_E; \sheaf I(0)) \cong C^3(\CP^\infty_E; \Gm)\).  In sum, an arbitrary \(MU[6, \infty)\)--orientation of \(E\) is witnessed by a symmetric rigid trivariate power series satisfying \(kU^0\)--linearity, called its \index{characteristic series}\textit{characteristic series}.  There are similar theories of characteristic series for rational orientations by \(M\SU\), \(MU\), and \(MUP\); in the latter two cases this recovers the \index{characteristic series!Hirzebruch series}\textit{Hirzebruch series}, which associates to an orientation \(\phi\co MUP \to \Q \otimes E\) the difference of trivializations \(x / \exp_\phi(x)\).  Conversely, any such series gives rise to a characteristic class by the formula \[K_\phi(\L_1 \oplus \cdots \oplus \L_n) = \prod_{j=1}^n \frac{c_1(\L_j)}{\exp_\phi(c_1(\L_j))},\] where \(c_1\) is the first Chern class associated to the canonical rational orientation.
+The rational conclusion of this analysis admits a very mild reformulation.  Note first that there is always a natural \(MU[6, \infty)\)--orientation of a rational spectrum \(E\) given by the composite \[MU[6, \infty) \to MU[6, \infty) \otimes \Q \to H\Q = \S \otimes \Q \xrightarrow{\eta_E} E \otimes \Q = E.\]  This canonical point turns the \(C^3(\CP^\infty_E; \Gm)\)--torsor structure of \(C^3(\CP^\infty_E; \sheaf I(0))\) into an isomorphism \(C^3(\CP^\infty_E; \sheaf I(0)) \cong C^3(\CP^\infty_E; \Gm)\).  In sum, an arbitrary \(MU[6, \infty)\)--orientation of \(E\) is witnessed by a symmetric rigid trivariate power series satisfying \(kU^0\)--linearity, called its \index{characteristic series}\textit{characteristic series}.  There are similar theories of characteristic series for rational orientations by \(M\SU\), \(MU\), and \(\MUP\); in the latter two cases this recovers the \index{characteristic series!Hirzebruch series}\textit{Hirzebruch series}, which associates to an orientation \(\phi\co \MUP \to \Q \otimes E\) the difference of trivializations \(x / \exp_\phi(x)\).  Conversely, any such series gives rise to a characteristic class by the formula \[K_\phi(\L_1 \oplus \cdots \oplus \L_n) = \prod_{j=1}^n \frac{c_1(\L_j)}{\exp_\phi(c_1(\L_j))},\] where \(c_1\) is the first Chern class associated to the canonical rational orientation.
 \end{remark}
 
 Our second task is to analyze the cohomology formal scheme associated to \(BU[6, \infty)\), and we begin with the choice \(E = H\).
@@ -1271,11 +1271,11 @@ models \(q\)--expansion.  The arrow \(K_{\Tate} \to K_{\Tate} \otimes \C\) is in
 We can use the formula \(\sigma_{\Tate} = \delta^3 \tilde \theta\) appearing in \Cref{D3thetaTrivializes} to explicitly understand the genus associated to \(\sigma_{\Tate}\) by passing to homotopy groups.  To begin, the appearances of the map \(\delta\) in \Cref{BUtoBUZ}, \Cref{BSUToBU}, and \Cref{MSUToMU6} show that \(\sigma_{\Tate}\) belongs to the commutative triangle
 \begin{center}
 \begin{tikzcd}
-MU[6, \infty) \arrow["\delta"]{r} \arrow["\sigma_{\Tate}"']{drrr} & M\SU \arrow["\delta"]{r} & MU \arrow["\delta"]{r} & MUP \arrow["\tilde \theta"]{d} \\
+MU[6, \infty) \arrow["\delta"]{r} \arrow["\sigma_{\Tate}"']{drrr} & M\SU \arrow["\delta"]{r} & MU \arrow["\delta"]{r} & \MUP \arrow["\tilde \theta"]{d} \\
 & & & KU\ps{q}.
 \end{tikzcd}
 \end{center}
-We will analyze this triangle by comparing \(\tilde\theta\) to the usual \(MUP\)--orientation of \(KU\), which selects the coordinate \(f(u) = 1 - u\) on the formal completion of \(\Gm = \Spec \Z[u^\pm]\).  Appealing to \Cref{BUtoBUZ}, the induced \(MU\)--orientation \[MU \xrightarrow{\delta} MUP \xrightarrow{\Td} KU\] sends \(f\) to the rigid section \(\delta f\) of \[\Theta^1 \sheaf I(0) = \sheaf I(0)_0 \otimes \sheaf I(0)^{-1} \cong \omega \otimes \sheaf I(0)\] given by \[\delta f = \frac{1}{1 - u} \left( - \frac{\mathrm{d}u}{u} \right).\]  The difference between \(\delta \Td\) and \(\delta \tilde\theta\) is expressed by an element \[\psi \in C^1(\widehat C_{\Tate}; \Gm),\] given explicitly by the quotient formula \[\psi = \left(\frac{\Td(1)}{\Td(u)}\right)^{-1} \cdot \frac{\tilde \theta_q(1)}{\tilde \theta_q(u)} = \prod_{n \ge 1} \frac{(1 - q^n)^2}{(1 - q^n u)(1 - q^n u^{-1})}.\]  This gives a re-expression of \(\delta \tilde\theta\) as the composite \[\delta \tilde\theta\co MU \xrightarrow{\eta_R} MU \sm MU \simeq MU \sm BU_+ \xrightarrow{\delta\Td \sm \psi} K_{\Tate},\] and hence its effect on a line bundle is determined by the evaluation of this \index{characteristic series}characteristic series: \[\psi(1 - \L) = \prod_{n \ge 1} \frac{(1 - q^n)^2}{(1 - q^n \L)(1 - q^n \L^{-1})}.\]  Its effect on vector bundles in general is determined by the \index{splitting principle}splitting principle and an exponential law, which after some computation~\cite[Section 2.7]{AHSTheoremOfTheCube} gives the generic formula \[\psi(\dim V \cdot 1 - V) = \bigotimes_{n \ge 1} \bigoplus_{j \ge 0} \Sym^j(\dim V \cdot 1 - V \otimes_{\R} \C) q^{jn} =: \bigotimes_{n \ge 1} \Sym_{q^n}(- \bar V_{\C}).\]  Finally, the map \((\eta_R)_*\co MU_* \to \pi_*(MU \sm \Susp^\infty_+ BU)\) sends a manifold \(M\) with stable normal bundle \(\nu\) to the pair \((M, \nu)\), so we at last compute
+We will analyze this triangle by comparing \(\tilde\theta\) to the usual \(\MUP\)--orientation of \(KU\), which selects the coordinate \(f(u) = 1 - u\) on the formal completion of \(\Gm = \Spec \Z[u^\pm]\).  Appealing to \Cref{BUtoBUZ}, the induced \(MU\)--orientation \[MU \xrightarrow{\delta} \MUP \xrightarrow{\Td} KU\] sends \(f\) to the rigid section \(\delta f\) of \[\Theta^1 \sheaf I(0) = \sheaf I(0)_0 \otimes \sheaf I(0)^{-1} \cong \omega \otimes \sheaf I(0)\] given by \[\delta f = \frac{1}{1 - u} \left( - \frac{\mathrm{d}u}{u} \right).\]  The difference between \(\delta \Td\) and \(\delta \tilde\theta\) is expressed by an element \[\psi \in C^1(\widehat C_{\Tate}; \Gm),\] given explicitly by the quotient formula \[\psi = \left(\frac{\Td(1)}{\Td(u)}\right)^{-1} \cdot \frac{\tilde \theta_q(1)}{\tilde \theta_q(u)} = \prod_{n \ge 1} \frac{(1 - q^n)^2}{(1 - q^n u)(1 - q^n u^{-1})}.\]  This gives a re-expression of \(\delta \tilde\theta\) as the composite \[\delta \tilde\theta\co MU \xrightarrow{\eta_R} MU \sm MU \simeq MU \sm BU_+ \xrightarrow{\delta\Td \sm \psi} K_{\Tate},\] and hence its effect on a line bundle is determined by the evaluation of this \index{characteristic series}characteristic series: \[\psi(1 - \L) = \prod_{n \ge 1} \frac{(1 - q^n)^2}{(1 - q^n \L)(1 - q^n \L^{-1})}.\]  Its effect on vector bundles in general is determined by the \index{splitting principle}splitting principle and an exponential law, which after some computation~\cite[Section 2.7]{AHSTheoremOfTheCube} gives the generic formula \[\psi(\dim V \cdot 1 - V) = \bigotimes_{n \ge 1} \bigoplus_{j \ge 0} \Sym^j(\dim V \cdot 1 - V \otimes_{\R} \C) q^{jn} =: \bigotimes_{n \ge 1} \Sym_{q^n}(- \bar V_{\C}).\]  Finally, the map \((\eta_R)_*\co MU_* \to \pi_*(MU \sm \Susp^\infty_+ BU)\) sends a manifold \(M\) with stable normal bundle \(\nu\) to the pair \((M, \nu)\), so we at last compute
 \begin{align*}
 \sigma_{\Tate}(M \in \pi_{2n} MU[6, \infty)) & = (\delta \Td \sm \theta')(M, \nu) \\
 & =: \Td\left(M; \bigotimes_{n \ge 1} \Sym_{q^n}(\bar \tau_{\C}) \right).
@@ -1622,7 +1622,7 @@ The cohomology formal schemes of a number of other infinite loopspaces related t
 \Div \Gamma[2] \arrow{rr} & & (BO \times \Z)_K \arrow{rr} \arrow[leftarrow, crossing over]{uu} & & \underline{\Z}.
 \end{tikzcd}
 \end{center}
-\caption{Presentations of the Morava \(K\)--theoretic cohomological formal schemes associated to connective covers of \(BO \times \Z\).  Each level in the prism is a bi-Cartesian square in the category of formal group schemes, and each level is the fiber of the maps off of the previous level to the Postnikov section.  The formal curve \(\overline \Gamma\) is \(\HP^\infty_K\), which is the fiber of \(\sigma\co \Div_2^+ \Gamma \to \Gamma\), and \(\overline \Gamma[2]\) is the fiber of the lift of the endo-isogeny \(2\co \Gamma \to \Gamma\) to \(\overline \Gamma\).  The map \(\sigma\) vanishes on \(\Div_0 \overline \Gamma\) and acts by summation on \(\Div_0 \Gamma[2]\).  The map \(\omega\) vanishes on \(\Div_0 \overline \Gamma\) and acts on \(\SDiv_0 \Gamma[2] \cong C_2 \Gamma[2]\) by \([a, b] \mapsto a \wedge b\).}\label{MoravaKthyOfBO}
+\caption{Presentations of the Morava \(K\)--theoretic cohomological formal schemes associated to connective covers of \(BO \times \Z\).  Each level in the prism is a bi-Cartesian square in the category of formal group schemes, and each level is the fiber of the maps off of the previous level to the Postnikov section.  The formal curve \(\overline \Gamma\) is \(\mathbb H\mathrm P^\infty_K\), which is the fiber of \(\sigma\co \Div_2^+ \Gamma \to \Gamma\), and \(\overline \Gamma[2]\) is the fiber of the lift of the endo-isogeny \(2\co \Gamma \to \Gamma\) to \(\overline \Gamma\).  The map \(\sigma\) vanishes on \(\Div_0 \overline \Gamma\) and acts by summation on \(\Div_0 \Gamma[2]\).  The map \(\omega\) vanishes on \(\Div_0 \overline \Gamma\) and acts on \(\SDiv_0 \Gamma[2] \cong C_2 \Gamma[2]\) by \([a, b] \mapsto a \wedge b\).}\label{MoravaKthyOfBO}
 \end{figure}
 
 \begin{remark}
