better reference for solid formal schemes

--- a/quillen.tex
+++ b/quillen.tex
@@ -100,7 +100,7 @@ More generally, the \textit{\(n\){\th} jet space} of \(X\) at \(s\), or the \tex
 
 In order to study analytic expansions of functions, we bundle these jet spaces together into a single object embodying formal expansions in \(X\) at \(s\):
 \begin{definition}\label{DefnCompletion}
-Fix a scheme \(S\).  A \index{formal scheme}\textit{formal \(S\)--scheme} \(X = \{X_\alpha\}_\alpha\) is an ind-system of \(S\)--schemes \(X_\alpha\).\footnote{This definition, owing to Strickland~\cite[Definition 4.1]{StricklandFSFG}, is somewhat idiosyncratic.  Its generality gives it good categorical properties, but it is somewhat disconnected from the formal schemes familiar to algebraic geometers, which primarily arise through linearly topologized rings~\cite[pg.\ 194]{Hartshorne}.  For functor-of-points definitions that hang more tightly with the classical definition, the reader is directed toward Strickland's solid formal schemes~\cite[Section 4.2]{StricklandFSFG} or to Beilinson and Drinfel'd~\cite[Section 7.11.1]{BeilinsonDrinfeld}.}  Given a closed subscheme \(Y\) of an affine \(S\)--scheme \(X\), we define the \textit{\(n\){\th} order neighborhood of \(Y\) in \(X\)} to be the scheme \(\Spec A/I^{n+1}\).  The \index{formal scheme!formal neighborhood}\textit{formal neighborhood of \(Y\) in \(X\)} is then defined to be the formal scheme \[X^\wedge_Y := \Spf A^\wedge_I := \left\{ \Spec A/I \to \Spec A/I^2 \to \Spec A/I^3 \to \cdots \right\}.\]  In the case that \(Y = S\), this specializes to the system of jet spaces as in \Cref{JetSpacesDefn}.
+Fix a scheme \(S\).  A \index{formal scheme}\textit{formal \(S\)--scheme} \(X = \{X_\alpha\}_\alpha\) is an ind-system of \(S\)--schemes \(X_\alpha\).\footnote{This definition, owing to Strickland~\cite[Definition 4.1]{StricklandFSFG}, is somewhat idiosyncratic.  Its generality gives it good categorical properties, but it is somewhat disconnected from the formal schemes familiar to algebraic geometers, which primarily arise through linearly topologized rings~\cite[pg.\ 194]{Hartshorne}.  For functor-of-points definitions that hang more tightly with the classical definition, the reader is directed toward Strickland's solid formal schemes~\cite[Definition 4.16]{StricklandFSFG} or to Beilinson and Drinfel'd~\cite[Section 7.11.1]{BeilinsonDrinfeld}.}  Given a closed subscheme \(Y\) of an affine \(S\)--scheme \(X\), we define the \textit{\(n\){\th} order neighborhood of \(Y\) in \(X\)} to be the scheme \(\Spec A/I^{n+1}\).  The \index{formal scheme!formal neighborhood}\textit{formal neighborhood of \(Y\) in \(X\)} is then defined to be the formal scheme \[X^\wedge_Y := \Spf A^\wedge_I := \left\{ \Spec A/I \to \Spec A/I^2 \to \Spec A/I^3 \to \cdots \right\}.\]  In the case that \(Y = S\), this specializes to the system of jet spaces as in \Cref{JetSpacesDefn}.
 \end{definition}
 
 Although we will make use of these definitions generally, the following ur-example captures the most geometrically-intuitive situation.
