--- a/characters.tex
+++ b/characters.tex
@@ -960,9 +960,11 @@ In particular, when \(X = *\), we find that
 That is, the rationalization of the \(E\)-cohomology of \(BG\) is a subring of generalized class functions.
 
 \begin{example}[{\cite[Section 1.3]{HKR}}]
-Specialized to the context of \Cref{KUCharacterExample}, the character map gives a ring homomorphism \[\chi_G\co R(G) \to \mathrm{Cl}(G_p, C_0)^{\widehat{\Z}},\] where \(R(G)\) is the representation ring of \(G\), \(C_0 = \Q(\zeta_j : j \ge 0)\) is the maximal abelian extension of \(\Q\), and \(\widehat{\Z}\) is both the Galois group of the extension and \(\Aut(\Lambda)\).  After tensoring up, this yields two isomorphisms
+Specialized to the context of \Cref{KUCharacterExample}, the character map gives a ring homomorphism
 \begin{align*}
-\chi_G\co C_0 \otimes R(G) & \to \mathrm{Cl}(G_p, C_0), \\
-\chi_G\co \Q \otimes R(G) & \to \mathrm{Cl}(G_p, C_0)^{\widehat{\Z}}.
+\chi_G\co R(G) & \to \mathrm{Cl}(G_p, C_0)^{\widehat{\Z}}, \\
+\intertext{where \(R(G)\) is the representation ring of \(G\), \(C_0 = \Q(\zeta_j : j \ge 0)\) is the maximal abelian extension of \(\Q\), and \(\widehat{\Z}\) is both the Galois group of the extension and \(\Aut(\Lambda)\).  After tensoring up, this yields two isomorphisms}
+C_0 \otimes \chi_G\co C_0 \otimes R(G) & \to \mathrm{Cl}(G_p, C_0), \\
+\Q \otimes \chi_G\co \Q \otimes R(G) & \to \mathrm{Cl}(G_p, C_0)^{\widehat{\Z}}.
 \end{align*}
 \end{example}
