--- a/preface.tex
+++ b/preface.tex
@@ -23,7 +23,7 @@
 \subsection*{Acknowledgements}
 
 
-This book owes an incredible amount to an incredible number of incredible people.  Understanding the research program summarized here has been one of the primary pursuits---if not \emph{the} primary pursuit---of my young academic career.  It has been an unmistakable and enormous privilege not only to be granted the time and freedom to learn about these beautiful ideas, but to also be able to do so directly from their progenitors.  I owe very large debts to Matthew Ando, Michael Hopkins, and Neil Strickland, for each having shown me such individual attention and care, as well as for having worked out the tail of this long story.  Matt, in particular, is the person who got me into higher mathematics, and I feel that for a decade now I have been paying forward the good will and deep friendliness that he showed me during my time at Urbana--Champaign.  Mike and Neil are not far behind.  Mike has been my supervisor in one sense or another for years running, in which role he has been continually encouraging and giving.  Among other things, Neil shared with me a note of his that eventually blossomed into my thesis problem, which is an awfully nice gift to have given.
+This book owes an incredible amount to a number of incredible people.  Understanding the research program summarized here has been one of the primary pursuits---if not \emph{the} primary pursuit---of my young academic career.  It has been an unmistakable and enormous privilege not only to be granted the time and freedom to learn about these beautiful ideas, but to also be able to do so directly from their progenitors.  I owe very large debts to Matthew Ando, Michael Hopkins, and Neil Strickland, for each having shown me such individual attention and care, as well as for having worked out the tail of this long story.  Matt, in particular, is the person who got me into higher mathematics, and I feel that for a decade now I have been paying forward the good will and deep friendliness that he showed me during my time at Urbana--Champaign.  Mike and Neil are not far behind.  Mike has been my supervisor in one sense or another for years running, in which role he has been continually encouraging and giving.  Among other things, Neil shared with me a note of his that eventually blossomed into my thesis problem, which is an awfully nice gift to have given.
 
 Less directly in ideas but no less directly in stewardship, I also owe a very large debt to my Ph.D.\ adviser, Constantin Teleman.  By the time I arrived at UC--Berkeley, I was already too soaked through with homotopy theory to develop a flavor for his sort of mathematical physics, and he nonetheless endeavored to meet me where I was.  It was Constantin who encouraged me to put special attention into making these ideas accessible, speaking understandably, and highlighting the connections with nearby fields.  He emphasized that mathematics done in isolation, rather than in maximal connection to other people, is mathematics wasted.  He has very much contributed to my passion for communication and clarity, which---in addition to the literal mathematics presented here---is the main goal of this text.\footnote{I have a clear memory of delivering a grad student seminar talk during my first year, where my mathematical sibling, George Melvin, asked me why $\G_m$ was called the multiplicative formal group.  I looked at him, looked at the board, and cautiously offered, ``\ldots because of the mixed term in the group law?''  Silly as it seems, this book has been significantly shaped by striving to correct for this single inarticulate incident, where it was revealed that I did not understand the original context of these tools that topologists were borrowing.  Although everyone starts learning from somewhere and not-knowing something is no cause for lasting embarrassment, it is certainly helpful to receive pushes in the direction of intellectual responsibility.  Thanks, George.}\footnote{It is, of course, up to the reader to determine whether I have actually succeeded at this, and, of course, any failure of mine in this regard can't possibly be visited upon Constantin.}
 
