--- a/intro.tex
+++ b/intro.tex
@@ -48,7 +48,7 @@ The integer obtained by the above process is \(\int_Z \omega\). \qed
 
 \noindent Many theorems accompany this definition of \(\int_Z \omega\) for free, entailed by the general machinery of stable homotopy theory.  The definition is also very general: given a ring map off of any bordism spectrum, a similar sequence of steps will furnish us with an integral tailored to that situation.
 
-Now take \(G = e\) to be the trivial structure group, which is the bordism theory of framed manifolds, i.e., those with stably trivial normal bundle.  In this case, the \index{Pontryagin--Thom construction}Pontryagin--Thom construction gives an equivalence \(\S \xrightarrow{\simeq} Me\).  It is thus possible that stable homotopy theory can be investigated solely through the lens of framed bordism.\footnote{Indeed, some people have taken up this viewpoint.  For a completely noncanonical point of entry, see Stolz~\cite{Stolz}.}  We will prefer to view this the other way: the sphere spectrum \(\S\) often appears to us as a natural object, and we will occasionally replace it by \(Me\), the framed bordism spectrum.  For example, given a ring spectrum \(E\) with unit map \(\S \to E\), we can reconsider this as a ring map \[Me \xrightarrow{\simeq} \S \to E.\]  Following along the lines of the previous paragraph, we learn that any ring spectrum \(E\) is automatically equipped with a theory of integration for framed manifolds.
+In the case of the trivial structure group \(G = e\), this construction gives the bordism theory of stably framed manifolds, and the \index{Pontryagin--Thom construction}Pontryagin--Thom theorem amounts to an equivalence \(\S \xrightarrow{\simeq} Me\).  Through this observation, these techniques gain widespread application in stable homotopy theory: for a ring spectrum \(E\), we can reconsider the unit map as a ring map \[Me \xrightarrow{\simeq} \S \to E,\] and by following the same path of ideas we learn that \(E\) is therefore equipped with a theory of integration for framed manifolds: \[\int\co \left. \left\{ \begin{array}{c}\text{stably framed \(n\)--manifolds \(Z\)} \\ \text{with a specified class \(\omega \in E^{n-m}(Z)\)} \end{array}\right\} \middle/ \sim \right. \to \pi_{-m} E.\]
 
 Sometimes, as in the examples above, this unit map factors: \[\S \simeq Me \to MO \to H\Z/2.\]  This is a witness to the overdeterminacy of \(H\Z/2\)'s integral for framed bordism: if the framed manifold is pushed all the way down to an unoriented manifold, there is still enough residual data to define the integral.\footnote{It is literally more information than this: even unframeable unoriented manifolds acquire a compatible integral.}  Given any ring spectrum \(E\), we can ask the analogous question: If we filter \(O\) by a decreasing system of structure groups, through what stage does the unit map \(Me \to E\) factor?  For instance, the map \[\S = Me \to M\SO \to H\Z\] considered above does \emph{not} factor further through \(MO\)---an orientation is \emph{required} to define the integral of an integer--valued cohomology class.  Recognizing \(\SO \to O\) as the \(0\){\th} Postnikov--Whitehead truncation of \(O\), we are inspired to use the rest of the \index{Postnikov tower}Postnikov filtration as our filtration of structure groups.  Here is a diagram of this filtration and some interesting minimally-factored integration theories related to it, circa 1970:
 \begin{center}
@@ -64,7 +64,7 @@ This is the situation homotopy theorists found themselves in some decades ago, w
 There is a map of rings \[\sigma: M\Spin_* \to \C(\!(q)\!).\]  Moreover, if \(Z\) is a \(\Spin\) manifold such that half\footnote{It is a special property of \(\Spin\)--manifolds that this class is always divisible by \(2\).} its first Pontryagin class vanishes---that is, if \(Z\) lifts to a \(\String\)--manifold---then \(\sigma(Z)\) lands in the subring \(MF \subseteq \Z\ps{q}\) of \index{modular form!q expansion@\(q\)--expansion}\(q\)--expansions of \index{modular form}modular forms with integral coefficients. \qed
 \end{theorem}
 
-\noindent However, neither party gave indication that their result should be valid ``in families'' (in our sense), and no theory of integration was formally produced (in our sense).  From the perspective of the homotopy theorist, it was not even clear what such a claim would mean: to give a topological enrichment of these theorems would mean finding a ring spectrum \(E\) such that \(E_*(*)\) had something to do with modular forms.
+\noindent However, neither party gave indication that their result should be valid ``in families'', and no attendant theory of integration was formally produced.  From the perspective of a homotopy theorist, it was not clear what such a claim would mean: to give a topological enrichment of these theorems would mean finding a ring spectrum \(E\) such that \(E_*(*)\) had something to do with modular forms.
 
 Around the same time, Landweber, Ravenel, and Stong began studying \index{elliptic spectrum}\textit{elliptic cohomology} for independent reasons~\cite{LRS}; sometime much earlier, Morava had constructed an object ``\(K^{\Tate}\)'' associated to the \index{Tate curve}Tate elliptic curve~\cite[Section 5]{MoravaFormsOfKthy}; and a decade later Ando, Hopkins, and Strickland~\cite{AHSTheoremOfTheCube} put all these together in the following theorem:
 
@@ -85,7 +85,7 @@ Leaving aside the extension problem for the moment, their main theorem is the fo
 For \(E\) an even--periodic cohomology theory, there is an isomorphism \[\Spec E_* MU[6, \infty) \cong C^3(\G_E; \sheaf I(0)),\] where ``\(C^3(\G_E; \sheaf I(0))\)'' is the affine scheme parametrizing \index{cubical structure}\textit{cubical structures} on the line bundle \(\sheaf I(0)\) over \(\G_E\).  When \(E\) is taken to be elliptic, so that there is a specified \index{elliptic curve}elliptic curve \(C\) and a specified isomorphism \(\G_E \cong C^\wedge_0\), the theory of elliptic curves gives a canonical such cubical structure and hence a preferred class \(MU[6, \infty) \to E\).  This assignment is natural in the choice of elliptic \(E\). \qed
 \end{theorem}
 
-Our real goal is to understand theorems like this last one, where algebraic geometry asserts some real control over something squarely in the domain of homotopy theory, and we will work through a sequence of case studies where this perspective shines through most brightly.  In particular, rather than taking an optimal route to the Ando--Hopkins--Strickland result, we will use it as a gravitational slingshot to cover many anciliary topics which are also governed by the technology of formal geometry.  We will begin by working through Thom's calculation of the homotopy of \(MO\), which holds the simultaneous attractive features of being approachable while revealing essentially all of the structural complexity of the general situation, so that we know what to expect later on.  Having seen that through, we will then venture on to other examples: the complex bordism ring, structure theorems for finite spectra, unstable cooperations, and, finally, the \(\sigma\)--orientation and its extensions.  Again, the overriding theme of the text will be that algebraic geometry is a good organizing principle that gives us one avenue of insight into how homotopy theory functions: it allows us to organize ``operations'' of various sorts between spectra derived from bordism theories.
+Our real goal is to understand theorems like this last one, where algebraic geometry asserts some real control over something squarely in the domain of homotopy theory.  In the course of this text, we will work through a sequence of case studies where this perspective shines through most brightly.  In particular, rather than taking an optimal route to the Ando--Hopkins--Strickland result, we will use it as a gravitational slingshot to cover many anciliary topics which are also governed by the technology of formal geometry.  We will begin by working through Thom's calculation of the homotopy of \(MO\), which holds the simultaneous attractive features of being approachable while revealing essentially all of the structural complexity of the general situation, so that we know what to expect later on.  Having seen that through, we will then venture on to other examples: the complex bordism ring, structure theorems for finite spectra, unstable cooperations, and, finally, the \(\sigma\)--orientation and its extensions.  Again, the overriding theme of the text will be that algebraic geometry is a good organizing principle that gives us one avenue of insight into how homotopy theory functions: it allows us to organize ``operations'' of various sorts between spectra derived from bordism theories.
 
 We should also mention that we will specifically \emph{not} discuss the following aspects of this story:
 \begin{itemize}
